少しエコになった

--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>CSSの練習</title>
+    <title>モグちゃんの練習</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
