--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -9,20 +9,20 @@
     <div id="mogumogu" class="mogumogu">
       <div class="line1">
         <img id="l1c1" src="../gif/sutegoro-250-250-30.gif" alt="hottta">
-        <img id="l1c2" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l1c3" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l1c4" src="../gif/ground-before-250-250.png" alt="hottta">
+        <img id="l1c2" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l1c3" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l1c4" src="../gif/ground-before-250-250.gif" alt="hottta">
       </div>
       <div class="line2">
-        <img id="l2c1" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l2c2" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l2c3" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l2c4" src="../gif/ground-before-250-250.png" alt="hottta">
+        <img id="l2c1" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l2c2" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l2c3" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l2c4" src="../gif/ground-before-250-250.gif" alt="hottta">
       </div>
       <div class="line3">
-        <img id="l3c1" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l3c2" src="../gif/ground-before-250-250.png" alt="hottta">
-        <img id="l3c3" src="../gif/ground-before-250-250.png" alt="hottta">
+        <img id="l3c1" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l3c2" src="../gif/ground-before-250-250.gif" alt="hottta">
+        <img id="l3c3" src="../gif/ground-before-250-250.gif" alt="hottta">
         <img id="l3c4" src="../gif/treasure-250-250-30.gif" alt="hottta">
       </div>
     </div>
