QRコード追加

--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="menu" class="mogumogu">
-      <img id="menuimg" src="./menu.png" alt="menuImage">
+      <img id="menuimg" src="../other-imges/menu.png" alt="menuImage">
     </div>
 
     <script type="text/javascript" src="JS/menuSource.js"></script>
