JSでタイム機能を実装

--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -10,6 +10,9 @@
       <img id="menuimg" src="../other-imges/menu.png" alt="menuImage">
     </div>
 
+    <div id="zenkai">前回のタイム</div>
+    <div id="timer">00:00:000</div>
+
     <script type="text/javascript" src="JS/menuSource.js"></script>
   </body>
 </html>
