--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -27,6 +27,8 @@
       </div>
     </div>
 
+    <div id="timer">00:00:000</div>
+
     <script type="text/javascript" src="JS/source.js"></script>
   </body>
 </html>
