前回のタイムを画像の上に表示

--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div id="menu" class="mogumogu">
+    <div style="position: relative;" id="menu" class="mogumogu">
       <img id="menuimg" src="../other-imges/menu.png" alt="menuImage">
+      <div id="timer" style="position:absolute; top:470px; left:30px; width:430px;">00:00:000</div>
     </div>
-
-    <div id="zenkai">前回のタイム</div>
-    <div id="timer">00:00:000</div>
 
     <script type="text/javascript" src="JS/menuSource.js"></script>
   </body>
