--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <div id="mogumogu" class="mogumogu">
-      <div class="line1">
+      <div class="line">
         <img id="l1c1" src="../gif/sutegoro-250-250-30.gif" alt="l1c1">
         <img id="l1c2" src="../gif/ground-before-250-250.gif" alt="l1c2">
         <img id="l1c3" src="../gif/ground-before-250-250.gif" alt="l1c3">
         <img id="l1c4" src="../gif/ground-before-250-250.gif" alt="l1c4">
       </div>
-      <div class="line2">
+      <div class="line">
         <img id="l2c1" src="../gif/ground-before-250-250.gif" alt="l2c1">
         <img id="l2c2" src="../gif/ground-before-250-250.gif" alt="l2c2">
         <img id="l2c3" src="../gif/ground-before-250-250.gif" alt="l2c3">
         <img id="l2c4" src="../gif/ground-before-250-250.gif" alt="l2c4">
       </div>
-      <div class="line3">
+      <div class="line">
         <img id="l3c1" src="../gif/ground-before-250-250.gif" alt="l3c1">
         <img id="l3c2" src="../gif/ground-before-250-250.gif" alt="l3c2">
         <img id="l3c3" src="../gif/ground-before-250-250.gif" alt="l3c3">
