varの排除とClear時の素材追加

--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -8,7 +8,7 @@
   <body>
     <div style="position: relative;" id="menu" class="mogumogu">
       <img id="menuimg" src="../other-imges/menu.png" alt="menuImage">
-      <div id="timer" style="position:absolute; top:470px; left:30px; width:430px;">00:00:000</div>
+      <div class="timer" id="menutimer" style="position:absolute; top:470px; left:30px; width:430px;">00:00:000</div>
     </div>
 
     <script type="text/javascript" src="JS/menuSource.js"></script>
