--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -25,6 +25,9 @@
         <img id="l3c3" src="../gif/ground-before-250-250.gif" alt="l3c3">
         <img id="l3c4" src="../gif/treasure-250-250-30.gif" alt="l3c4">
       </div>
+
+      <!-- <img id="clear" style="position:absolute; top:130px; left:10px; width:1000px;" src="../other-imges/clear.png" alt="menuImage">
+      <div class="timer" id="digtimer" style="position:absolute; top:370px; left:250px; width:430px;">00:00:000</div> -->
     </div>
 
     <script type="text/javascript" src="JS/source.js"></script>
