文字の位置を調整

--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div style="position: relative;" id="menu" class="mogumogu">
-      <img id="menuimg" src="../other-imges/menu.png" alt="menuImage">
-      <div class="timer" id="menutimer" style="position:absolute; top:470px; left:7%; width:430px;">00:00:000</div>
-    </div>
+      <div id="menu" class="mogumogu">
+        <img id="menuimg" src="../other-imges/menu.png" alt="menuImage" width="1000px">
+        <p class="timer" id="menutimer">00:00:000</p>
+      </div>
 
     <script type="text/javascript" src="JS/menuSource.js"></script>
   </body>
