--- a/design/html-test/menu.html
+++ b/design/html-test/menu.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>モグちゃんメニュー</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="moguchan-face.ico">
   </head>
   <body>
       <div id="menu" class="mogumogu">
