--- a/design/html-test/moguchan.html
+++ b/design/html-test/moguchan.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>モグちゃんの練習</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="moguchan-face.ico">
   </head>
   <body>
     <div id="mogumogu" class="mogumogu">
